# odysseus-identity-manager-server

./: .drone.yml  .gitignore  Cargo.toml  README.md  docker-compose.dev.yml  rustfmt.toml
.devcontainer/: Dockerfile
.docker/: odysseus-identity-manager-server.dockerfile
environments/: development.yaml
src/: main.rs
src/auth/: errors.rs  mod.rs  routes.rs  types.rs
src/auth/consent/: api.rs  errors.rs  mod.rs  routes.rs  types.rs
src/auth/local/: api.rs  errors.rs  mod.rs  routes.rs  types.rs
src/auth/login/: api.rs  errors.rs  mod.rs  routes.rs  types.rs
src/auth/logout/: errors.rs  routes.rs  types.rs
src/auth/oauth_client/: metadata.rs
src/models/: user.rs
src/routes/: auth.rs
src/settings/: app_settings.rs  hydra.rs  logger.rs  mod.rs  mongo.rs  server.rs  settings.rs  smtp.rs
src/templates/: email-verified.hbs  signup.hbs
src/user/: errors.rs  mod.rs  model.rs  types.rs
src/utils/: hasher.rs  logger.rs  mod.rs  mongo.rs  serializers.rs
