[package]
name = "odysseus-identity-manager"
version = "0.7.1-alpha.5"
authors = ["Simone Romano <simoneromano@tutanota.de>"]
edition = "2018"
publish = false
license = "GPLv3"
license-file = "https://www.gnu.org/licenses/gpl-3.0-standalone.html"
description = "A service that handles all authentication processes with 2fa, uses ory hydra to handle OpenID and OAuth2 requests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cors middleware
actix-cors = "0.5.4"
# Actix web redis session
actix-redis = "0.9.2"
# Actix web sessions
actix-session = "0.4.1"
# HTTP Server
actix-web = "3.3.2"
# Password hashing
argon2 = "0.2.0"
# Base64 encode/decode
base64 = "0.13.0"
# Configuration helper
config = "0.11.0"
# Handlebars template
handlebars = "4.0.1"
# EMail client (don't upgrade until actix-web goes to 4.0 stable)
lettre = "0.9.6"
# EMail builder (don't upgrade until actix-web goes to 4.0 stable)
lettre_email = "0.9.4"
# OTP generator
libreauth = { version = "0.14.1", default-features = false, features = ["oath"] }
# Basic logging
log = "0.4.14"
# File logging
log4rs = { version = "1.0.0", features = ["gzip"] }
# Random generator
nanoid = "0.4.0"
# Lazy static evaluation
once_cell = "1.7.2"
# Hydra client (TEMPORARY UNTIL actix-web GOES TO 4.0 STABLE)
ory-hydra-client = { git="https://github.com/simoneromano96/sdk.git", path="/clients/hydra/rust/" }
# OpenAPI documentation
paperclip = { git = "https://github.com/wafflespeanut/paperclip.git", rev = "20ec2e954dfb15613807130105a41e8f4b91066e", features = ["actix3-nightly", "actix-session"] }
# Cryptographically secure random
rand = "0.8.3"
# Reqwest http client (to be removed?)
reqwest = { version = "0.10.10", default-features = false, features = ["rustls-tls"] }
# Serialize and deserialize
serde = "1.0.126"
# JSON ser/de
serde_json = "1.0.64"
# QueryString ser/de
serde_qs = "0.8.3"
# Error derive
thiserror = "1.0.25"
# URL builder
url = "2.2.2"
# Validators on struct
validator = { version = "0.13.0", features = ["derive"] }
# MongoDB ODM
wither = "0.9.0"

[profile.release]
# Link-time Optimization
lto = true
# Codegen Optimization
codegen-units = 1
# Abort on panic
panic = "abort"
