[package]
name = "odysseus-identity-manager"
version = "0.7.3-alpha.3"
authors = ["Simone Romano <simoneromano@tutanota.de>"]
edition = "2018"
publish = false
license = "GPLv3"
license-file = "https://www.gnu.org/licenses/gpl-3.0-standalone.html"
description = "A service that handles all authentication processes with 2fa, uses ory hydra to handle OpenID and OAuth2 requests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cors middleware
actix-cors = "0.6.0-beta.2"
# Actix web redis session
actix-redis = "0.10.0-beta.2"
# Actix web sessions
actix-session = "0.5.0-beta.2"
# HTTP Server
actix-web = "4.0.0-beta.8"
# Password hashing
argon2 = "0.3.0"
# Base64 encode/decode
base64 = "0.13.0"
# Configuration helper
config = "0.11.0"
# Handlebars template
handlebars = "4.1.2"
# EMail client
lettre = { version = "0.10.0-rc.3", default-features = false, features = ["builder", "hostname", "smtp-transport", "rustls-tls", "r2d2"] }
# OTP generator
libreauth = { version = "0.14.1", default-features = false, features = ["oath"] }
# Basic logging
log = "0.4.14"
# File logging
log4rs = { version = "1.0.0", features = ["gzip"] }
# Random generator
nanoid = "0.4.0"
# Lazy static evaluation
once_cell = "1.8.0"
# Hydra client (TEMPORARY UNTIL actix-web GOES TO 4.0 STABLE)
# ory-hydra-client = { git="https://github.com/simoneromano96/sdk.git", path="/clients/hydra/rust/" }
ory-hydra-client = "1.10.6"
# OpenAPI documentation
# paperclip = { git = "https://github.com/wafflespeanut/paperclip.git", rev = "20ec2e954dfb15613807130105a41e8f4b91066e", features = ["actix3-nightly", "actix-session"] }
paperclip = { git = "https://github.com/sfisol/paperclip.git", rev = "7bb0662d1bfb7340b986105b7d8adbe088cc9fd7", features = ["actix", "actix-session4"]}
# Cryptographically secure random
rand = "0.8.4"
# Reqwest http client (to be removed?)
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls"] }
# Serialize and deserialize
serde = "1.0.130"
# JSON ser/de
serde_json = "1.0.67"
# QueryString ser/de
serde_qs = "0.8.4"
# Error derive
thiserror = "1.0.28"
# URL builder
url = "2.2.2"
# Validators on struct
validator = { version = "0.14.0", features = ["derive"] }
# MongoDB ODM
wither = "0.9.0"

[profile.release]
# Link-time Optimization
lto = true
# Codegen Optimization
codegen-units = 1
# Abort on panic
panic = "abort"
