[package]
name = "odysseus-identity-manager"
version = "0.7.3-alpha.2"
authors = ["Simone Romano <simoneromano@tutanota.de>"]
edition = "2018"
publish = false
license = "GPLv3"
license-file = "https://www.gnu.org/licenses/gpl-3.0-standalone.html"
description = "A service that handles all authentication processes with 2fa, uses ory hydra to handle OpenID and OAuth2 requests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cors middleware
actix-cors = "0.6"
# Actix web redis session
actix-redis = "0.10"
# Actix web sessions
actix-session = "0.5"
# HTTP Server
actix-web = "4"
# Password hashing
argon2 = "0.3"
# Base64 encode/decode
base64 = "0.13"
# Configuration helper
config = "0.12"
# Handlebars template
handlebars = "4"
# EMail client
lettre = { version = "0.10.0-rc.4", default-features = false, features = ["builder", "hostname", "smtp-transport", "rustls-tls"] }
# OTP generator
libreauth = { version = "0.14.1", default-features = false, features = ["oath"] }
# Basic logging
log = "0.4"
# File logging
log4rs = { version = "1", features = ["gzip"] }
# Random generator
nanoid = "0.4"
# Lazy static evaluation
once_cell = "1"
# Hydra client (TEMPORARY UNTIL actix-web GOES TO 4.0 STABLE)
# ory-hydra-client = { git="https://github.com/simoneromano96/sdk.git", path="/clients/hydra/rust/" }
ory-hydra-client = "1.11.7"
# OpenAPI documentation
# paperclip = { git = "https://github.com/wafflespeanut/paperclip.git", rev = "20ec2e954dfb15613807130105a41e8f4b91066e", features = ["actix3-nightly", "actix-session"] }
# paperclip = { version = "0.6", features = ["actix3-nightly", "actix-session"] }
paperclip = { git = "https://github.com/sfisol/paperclip.git", rev = "2d6d0d213843e96ab6b3b3161e3e5f493eaeaad7", features = ["actix-nightly", "actix-session", "v3"] }
# Cryptographically secure random
rand = "0.8"
# Reqwest http client (to be removed?)
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
# Serialize and deserialize
serde = "1"
# JSON ser/de
serde_json = "1"
# QueryString ser/de
serde_qs = "0.9"
# Error derive
thiserror = "1"
# URL builder
url = "2"
# Validators on struct
validator = { version = "0.14", features = ["derive"] }
# MongoDB ODM
# wither = "0.9.0"
wither = { git = "https://github.com/thedodd/wither.git", rev = "52fd5037d5aa0dc358def3760cea8ef13a8766e8" }

[profile.release]
# Link-time Optimization
lto = true
# Codegen Optimization
codegen-units = 1
# Abort on panic
panic = "abort"
